<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.26">
  <DUT Name="ST_TempLoad_State" Id="{b8061634-8fd3-4a37-acd0-98f326ca15a3}">
    <Declaration><![CDATA[TYPE ST_TempLoad_State :
STRUCT
	bPparamLoaded: BOOL;
	bMparamLoaded: BOOL;
	bPparamLoad: BOOL;
	bMparamLoad: BOOL;
	bSupplyParamsLoad: BOOL;
	bSupplyParamsLoaded: BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>