<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.26">
  <DUT Name="ST_TempSave" Id="{444eec19-39db-48bc-8835-ef310eac201d}">
    <Declaration><![CDATA[TYPE ST_TempSave :
STRUCT
	stTempCmd: ST_TempSave_Cmd;
END_STRUCT
END_TYPE
]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>